--- a/style.css
+++ b/style.css
@@ -1,18 +1,39 @@
 * {
-  background: #181a18;
-  font-family: "Fredoka", sans-serif;
-  color: lightyellow;
+    background: #181a18;
+    /* background: lightyellow; */
+    /* font-family: "Fredoka One", sans-serif; */
+    font-family: arial, sans-serif;
+    /* color: #ffcb3e; */
+    color: lightyellow;
 }
 
 .container {
-  text-align: center;
-  margin: 0 auto;
-  width: 80%;
+    text-align: center;
+    margin: 0 auto;
+    width: 800px;
 }
 
-#mainTitle {
-  text-transform: uppercase;
+h1,
+h2,
+h3,
+h4 {
+    font-family: "Exo", sans-serif;
+    text-transform: uppercase;
+    /* color: #f5e45f; */
 }
-aside {
-  text-align: center;
+
+.asideContainer {
+    text-align: left;
+    margin: auto;
+}
+
+#gameDescription {
+    float: left;
+    width: 45%;
+    /* padding-right: 40px; */
+}
+
+#gameControls {
+    float: right;
+    width: 35%;
 }
