changed text color in html elements

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   background: #181a18;
   font-family: "Josefin Sans", sans-serif;
   font-size: 20px;
-  color: lightyellow;
+  color: #fff;
   font-weight: 300;
 }
 
